Fix spacy_nlp path in config.yml

--- a/bot/config/languages/en/config.yml
+++ b/bot/config/languages/en/config.yml
@@ -3,9 +3,9 @@
 language: "en"  # your two-letter language code
 
 pipeline:
-- name: spacy_nlp.spacy_nlp_neuralcoref.SpacyNLPNeuralCoref
+- name: bot.spacy_nlp.spacy_nlp_neuralcoref.SpacyNLPNeuralCoref
   model: "en_neuralcoref"
-- name: spacy_nlp.spacy_tokenizer_neuralcoref.SpacyTokenizerNeuralCoref
+- name: bot.spacy_nlp.spacy_tokenizer_neuralcoref.SpacyTokenizerNeuralCoref
 # - name: SpacyFeaturizer
 - name: RegexFeaturizer
 - name: LexicalSyntacticFeaturizer
