--- a/bot/languages/en/config.yml
+++ b/bot/languages/en/config.yml
@@ -11,7 +11,9 @@ pipeline:
     analyzer: "char_wb"
     min_ngram: 1
     max_ngram: 4
+  - name: CRFEntityExtractor
   - name: DIETClassifier
+    entity_recognition: False
     epochs: 100
   - name: EntitySynonymMapper
   - name: ResponseSelector
@@ -33,7 +35,7 @@ policies:
     epochs: 100
   - name: MappingPolicy
   - name: "FallbackPolicy"
-    nlu_threshold: 0.55
+    nlu_threshold: 0.5
     core_threshold: 0.3
     fallback_action_name: "action_default_fallback"
   #- name: language_detection.lang_change_policy.LangChangePolicy
