added extra slots to reduce train warning output

--- a/bot/languages/br/domain.yml
+++ b/bot/languages/br/domain.yml
@@ -35,6 +35,10 @@ slots:
     type: text
   bot_date_amazonas:
     type: text
+  bot_time:
+    type: text
+  bot_date:
+    type: text
   language_slot:
     type: categorical
     values:
