--- a/bot/languages/br/domain.yml
+++ b/bot/languages/br/domain.yml
@@ -128,7 +128,7 @@ actions:
 - utter_comment_racist
 - utter_comment_smart
 - utter_coronavirus_info
-- utter_covid_aftereffects_immunity
+- utter_covid_aftereffects
 - utter_covid_babys_children
 - utter_covid_cosibot
 - utter_covid_crisis_howlong
@@ -178,6 +178,7 @@ actions:
 - utter_myth_transmission_hot_areas
 - utter_myth_uv_lamps
 - utter_myth_conspiracy_fakenews
+- utter_myth_mosquitoes
 - utter_prevenion_medical_attention
 - utter_prevention_clean_hands
 - utter_prevention_disinfection
@@ -285,7 +286,7 @@ intents:
 - comment_racist
 - comment_smart
 - coronavirus_info
-- covid_aftereffects_immunity
+- covid_aftereffects
 - covid_babys_children
 - covid_cosibot
 - covid_crisis_howlong
@@ -294,6 +295,7 @@ intents:
 - covid_disease_process
 - covid_duration
 - covid_food
+- covid_immunity
 - covid_incubation
 - covid_info
 - covid_meaning
@@ -303,6 +305,7 @@ intents:
 - covid_preexisting_illness
 - covid_procedure_after_infection
 - covid_sars
+- covid_schools
 - covid_sex
 - covid_situation
 - covid_situation_deaths
@@ -315,6 +318,7 @@ intents:
 - covid_symptoms
 - covid_treatment
 - covid_worry
+- ebola
 - economy_consequences
 - features_date
 - features_time
@@ -327,20 +331,22 @@ intents:
 - mask_visors
 - myth_alcohol
 - myth_cold_weather
+- myth_garlic
 - myth_hot_bath
+- myth_mosquitoes
 - myth_packages
 - myth_transmission_hot_areas
 - myth_conspiracy_fakenews
 - myth_influenza
 - myth_air_conditioning
 - myth_5G
+- myth_sesame_oil
 - myth_hand_dryer
 - myth_uv_lamps
 - myth_thermal_scanner
 - myth_antibiotics
 - myth_pneumonia_vaccine
 - myth_saline
-- myth_sesame_oil
 - prevention_clean_hands
 - prevention_disinfection
 - prevention_distance
@@ -352,6 +358,7 @@ intents:
 - prevention_medicine
 - prevention_respiratory_hygiene
 - prevention_touch
+- prevention_vaccine
 - quarantine_control
 - quarantine_dogwalking
 - quarantine_dos_and_donts
@@ -753,6 +760,36 @@ responses:
           menor do que o surto da SARS de 2003. Entretanto, é muito maior do que a
           taxa de mortalidade por gripe sazonal.<a href='https://www.ecdc.europa.eu/en/novel-coronavirus-china/questions-answers'
           target='_blank'>(1)</a></p>
+  utter_covid_immunity:
+#      @Translate
+#      - custom:
+#          answers:
+#            - type: ssml
+#              ssml: <speak>It is too early to know how long the protective immune response
+#                against SARS CoV 2 will last, as this will require longitudinal
+#                serological studies that follow patients’ immunity over an
+#                extended period of time. Evidence from other coronavirus
+#                infections, like SARS and MERS, indicates that immunity may last
+#                for up to three years and re-infection with the same strain of
+#                seasonal circulating coronavirus is highly unlikely in the same or
+#                following season. This could also hold true for SARS CoV 2 as
+#                there is emerging evidence from early studies suggesting that
+#                individuals develop antibodies after infection and are likely to
+#                be immune from reinfection in the short term.</speak>
+#            - type: html
+#              text: <p>It is too early to know how long the protective immune response against
+#                SARS-CoV-2 will last, as this will require longitudinal
+#                serological studies that follow patients’ immunity over an
+#                extended period of time. Evidence from other coronavirus
+#                infections (SARS and MERS) indicates that immunity may last for up
+#                to three years and re-infection with the same strain of seasonal
+#                circulating coronavirus is highly unlikely in the same or
+#                following season. This could also hold true for SARS-CoV-2 as
+#                there is emerging evidence from early studies suggesting that
+#                individuals develop antibodies after infection and are likely to
+#                be immune from reinfection in the short term.<a
+#                href='https://www.ecdc.europa.eu/sites/default/files/documents/RRA-seventh-update-Outbreak-of-coronavirus-disease-COVID-19.pdf'
+#                target='_blank'>(1)</a></p>
   utter_covid_crisis_howlong:
   - custom:
       answers:
@@ -779,32 +816,33 @@ responses:
           value: Transmissão
         - label: Sintomas
           value: Sintomas
-  utter_covid_aftereffects_immunity:
-  - custom:
-      answers:
-      - type: ssml
-        ssml: <speak>É muito cedo para saber quanto tempo durará a resposta imunológica
-          protetora contra a Sars Cov 2, uma vez que isto irá requerer estudos serológicos
-          longitudinais que acompanham a imunidade dos doentes durante um período
-          de tempo prolongado. Evidências de outras infecções por coronavírus,
-          como Sars e Mers, indicam que a imunidade pode durar até três anos e é
-          altamente improvável a reinfecção com a mesma cepa de coronavírus em
-          circulação sazonal na mesma estação ou na estação seguinte. Isso também
-          pode se aplicar à Sars Cov 2, pois existem evidências emergentes de estudos
-          iniciais que sugerem que os indivíduos desenvolvem anticorpos após a infecção
-          e provavelmente são imunes à reinfecção a curto prazo.</speak>
-      - type: html
-        text: <p>É muito cedo para saber quanto tempo durará a resposta imunológica
-          protetora contra a SARS-CoV-2, uma vez que isto irá requerer estudos serológicos
-          longitudinais que acompanham a imunidade dos doentes durante um período
-          de tempo prolongado. Evidências de outras infecções por coronavírus,
-          como SARS e MERS, indicam que a imunidade pode durar até três anos e é
-          altamente improvável a reinfecção com a mesma cepa de coronavírus em
-          circulação sazonal na mesma estação ou na estação seguinte. Isso também
-          pode se aplicar à SARS-CoV-2, pois existem evidências emergentes de estudos
-          iniciais que sugerem que os indivíduos desenvolvem anticorpos após a infecção
-          e provavelmente são imunes à reinfecção a curto prazo.<a href='https://www.ecdc.europa.eu/sites/default/files/documents/RRA-seventh-update-Outbreak-of-coronavirus-disease-COVID-19.pdf'
-          target='_blank'>(1)</a></p>
+  utter_covid_aftereffects:
+#      @Translate
+#      - custom:
+#          answers:
+#            - type: ssml
+#              ssml: "<speak>There are three factors that affect the lung damage risk in
+#                COVID-19 infections and how likely the person is to recover and
+#                regain lung function: Disease severity, pre-existing health
+#                conditions, and treatment. After a serious case of COVID-19, a
+#                patient’s lungs can recover, but not overnight. Recovery from lung
+#                damage takes time. There’s the initial injury to the lungs,
+#                followed by scarring. Over time, the tissue heals, but it can take
+#                three months to a year or more for a person’s lung function to
+#                return to pre-COVID-19 levels.</speak>"
+#            - type: html
+#              text: "<p>There are three factors that affect the lung damage risk in COVID-19
+#                infections and how likely the person is to recover and regain lung
+#                function: Disease severity, pre-existing health conditions, and
+#                treatment. After a serious case of COVID-19, a patient’s lungs can
+#                recover, but not overnight. Recovery from lung damage takes time.
+#                There’s the initial injury to the lungs, followed by scarring.
+#                Over time, the tissue heals, but it can take three months to a
+#                year or more for a person’s lung function to return to
+#                pre-COVID-19 levels. <a
+#                href='https://www.hopkinsmedicine.org/health/conditions-and-disea\
+#                ses/coronavirus/what-coronavirus-does-to-the-lungs'
+#                target='_blank'>(1)</a></p>"
   utter_covid_disease_process:
   - custom:
       answers:
@@ -1452,6 +1490,46 @@ responses:
           value: Sintomas
         - label: Mitos
           value: Mitos
+  utter_prevention_vaccine:
+#      @Translate
+#      - custom:
+#          answers:
+#            - type: ssml
+#              ssml: <speak>Research about vaccines is happening at breakneck speed. About 140
+#                are in early development, and around two dozen are now being
+#                tested on people in clinical trials. A vaccine would normally take
+#                years, if not decades, to develop. Researchers hope to achieve the
+#                same amount of work in only a few months. Most experts think a
+#                vaccine is likely to become widely available by mid-2021, about
+#                12-18 months after Sars Cov 2 first emerged. That would be a huge
+#                scientific feat and there are no guarantees it will work. Four
+#                coronaviruses already circulate in human beings. They cause common
+#                cold symptoms and we don't have vaccines for any of them.</speak>
+#            - type: html
+#              text: <p>Research about vaccines is happening at breakneck speed. About 140 are
+#                in early development, and around two dozen are now being tested on
+#                people in clinical trials. A vaccine would normally take years, if
+#                not decades, to develop. Researchers hope to achieve the same
+#                amount of work in only a few months. Most experts think a vaccine
+#                is likely to become widely available by mid-2021, about 12-18
+#                months after Sars Cov 2 first emerged. That would be a huge
+#                scientific feat and there are no guarantees it will work. Four
+#                coronaviruses already circulate in human beings. They cause common
+#                cold symptoms and we don't have vaccines for any of them.<a
+#                href='https://www.bbc.com/news/health-51665497'
+#                target='_blank'>(1)</a></p>
+#            - type: hints
+#              options:
+#                - label: Preventive Measures
+#                  value: Preventive Measures
+#                - label: Symptoms
+#                  value: Symptoms
+#                - label: Medical Masks
+#                  value: Medical Masks
+#                - label: Transmission
+#                  value: Transmission
+#                - label: World Situation
+#                  value: World Situation
   utter_prevention_clean_hands:
   - custom:
       answers:
@@ -1651,13 +1729,6 @@ responses:
           value: Transmissão
         - label: Situação Mundial
           value: Situação Mundial
-  utter_ask_country:
-  - custom:
-      answers:
-      - type: ssml
-        ssml: <speak>Você quer dados sobre um país específico?</speak>
-      - type: text
-        text: Você quer dados sobre um país específico?
   utter_bot_capabilities:
   - custom:
       answers:
@@ -1885,6 +1956,20 @@ responses:
           diferentes, mesmo dentro do mesmo país, e as abordagens de teste serão
           adaptadas à situação a nível nacional e local.<a href='https://www.ecdc.europa.eu/en/novel-coronavirus-china/questions-answers'
           target='_blank'>(1)</a></p>
+  utter_ebola:
+#      @Translate
+#      - custom:
+#          answers:
+#            - type: ssml
+#              ssml: <speak>For detailed information about the Ebola virus disease, please have
+#                a look at the W H O page under the displayed link.</speak>
+#            - type: text
+#              text: For detailed information about the Ebola virus disease, please have a look
+#                at the WHO page under the displayed link.
+#            - type: links
+#              links:
+#                - title: "WHO: Ebola virus disease"
+#                  url: https://www.who.int/health-topics/ebola/
   utter_cc_moon:
   - custom:
       answers:
@@ -2485,6 +2570,38 @@ responses:
           está se espalhando em muitos países que não possuem redes móveis 5G.<a
           href='https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public/myth-busters'
           target='_blank'>(1)</a></p>
+  utter_myth_mosquitoes:
+#      @Translate
+#      - custom:
+#          answers:
+#            - type: ssml
+#              ssml: <speak>To date there has been no information nor evidence to suggest that
+#                the new coronavirus could be transmitted by mosquitoes. The new
+#                coronavirus is a respiratory virus which spreads primarily through
+#                droplets generated when an infected person coughs or sneezes, or
+#                through droplets of saliva or discharge from the nose. To protect
+#                yourself, clean your hands frequently with an alcohol-based hand
+#                rub or wash them with soap and water. Also, avoid close contact
+#                with anyone who is coughing and sneezing.</speak>
+#            - type: html
+#              text: <p>To date there has been no information nor evidence to suggest that the
+#                new coronavirus could be transmitted by mosquitoes. The new
+#                coronavirus is a respiratory virus which spreads primarily through
+#                droplets generated when an infected person coughs or sneezes, or
+#                through droplets of saliva or discharge from the nose. To protect
+#                yourself, clean your hands frequently with an alcohol-based hand
+#                rub or wash them with soap and water. Also, avoid close contact
+#                with anyone who is coughing and sneezing.<a
+#                href='https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public/myth-busters#mosquito-bites'
+#                target='_blank'>(1)</a></p>
+#            - type: hints
+#              options:
+#                - label: World Situation
+#                  value: World Situation
+#                - label: Preventive Measures
+#                  value: Preventive Measures
+#                - label: About COVID-19
+#                  value: About COVID-19
   utter_myth_antibiotics:
   - custom:
       answers:
@@ -3029,6 +3146,18 @@ responses:
       - type: text
         text: A última atualização de dados indica que em {country}, {total_tests}
           testes foram realizados desde o início da coleta de dados.
+  utter_covid_schools:
+#      @Translate
+#      - custom:
+#          answers:
+#            - type: ssml
+#              ssml:
+#                <speak>I am unable to give you a concrete answer since each country has
+#                its own schedule regarding  the re-opening of schools.</speak>
+#            - type: html
+#              text:
+#                <p>I am unable to give you a concrete answer since each country has its
+#                own schedule regarding  the re-opening of schools.</p>
   utter_fallback_first:
   - custom:
       answers:
